# esp-idf

components/fatfs/vfs/: vfs_fat.c
components/vfs/: vfs.c
examples/get-started/blink/main/: blink_example_main.c
examples/get-started/sample_project/: CMakeLists.txt
examples/get-started/sample_project/main/: main.cpp
examples/peripherals/uart/uart_echo/: CMakeLists.txt
examples/peripherals/uart/uart_echo/main/: uart_echo_example_main copy.c  uart_echo_example_main.c
examples/protocols/http_server/captive_portal/main/: CMakeLists.txt
examples/protocols/http_server/ws_echo_server/: sdkconfig.defaults
examples/protocols/http_server/ws_echo_server/main/: CMakeLists.txt  candel.txt  insights_auth_key.txt  ws_echo_server.cpp
examples/protocols/https_server/wss_server/: .cproject  partitions.csv  sdkconfig.defaults
examples/protocols/https_server/wss_server/main/: .cproject  CMakeLists.txt  idf_component.yml  keep_alive.h  wss_server_example.cpp
examples/protocols/https_server/wss_server/main/ui/: index.html
examples/system/console/basic/main/: consolews.c
